# getdeck

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASE.md  deck.example.yaml  deck.example_kind.yaml  deck.gefyra.test.yaml  deck.yaml  install.sh  pyoxidizer.bzl  pyproject.toml  requirements.pyoxidizer.txt  setup.cfg  version.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/scripts/: get_version.py
.github/workflows/: brew-formula.yaml  deck-build.yaml  dist-build-linux.yaml  dist-build-mac.yaml  dist-build-windows.yaml  docker-build-multiarch.yaml  python-linter.yaml  python-publish.yaml  python-test-gefyra.yaml  python-test.yaml  python-tester.yaml
deck/: __main__.py  configuration.py  k8s.py  utils.py
deck/api/: __init__.py  get.py  list.py  remove.py  utils.py
deck/deckfile/: deckfile_1.py  file.py  selector.py
deck/provider/: abstract.py  factory.py  types.py
deck/provider/k3d/: __init__.py
deck/provider/kubectl/: __init__.py
deck/sources/: helm.py  tooler.py  types.py  utils.py
docs/: design.md
examples/: deck.buzzword-counter.yaml  deck.dashboard.yaml  deck.java-spring.yaml  deck.kind.yaml
getdeck/: __main__.py  configuration.py  docker.py  k8s.py  utils.py
getdeck/api/: cluster.py  get.py  hosts.py  list.py  remove.py  stop.py
getdeck/api/cluster/: __init__.py
getdeck/cli/: __init__.py  console.py  get.py  hosts.py  list.py  remove.py  stop.py  telemetry.py  utils.py  version.py
getdeck/deckfile/: deckfile_1.py  errors.py  file.py  selector.py
getdeck/deckfile/fetch/: deck_fetcher.py  utils.py
getdeck/fetch/: deck_fetcher.py  fetch.py  source_fetcher.py  types.py  utils.py
getdeck/provider/: abstract.py  errors.py  factory.py  types.py  utility_provider.py
getdeck/provider/beiboot/: __init__.py
getdeck/provider/k3d/: __init__.py
getdeck/provider/kind/: __init__.py
getdeck/provider/kubectl/: __init__.py
getdeck/sources/: fetcher.py  file.py  generator.py  helm.py  inline.py  kustomize.py  selector.py  tooler.py  types.py  utils.py
getdeck/telemetry/: telemetry.py
test/: test_deckfile.py
test/beiboot/: deck.host.yaml  deck.test.yaml  hello.yaml  nginx-ingress.yaml
test/deckfile/: deck.deprecated.yaml  deck.empty.yaml
test/sources/: deck.empty.yaml  deck.file.yaml  deck.helm.yaml  deck.inline.yaml  hello.yaml
test/src/: test_deck_fetch_behavior.py  test_deck_fetch_utils.py  test_deck_fetcher.py  test_deckfile.py
test/src/fetch/: test_deck_fetch_behavior.py  test_deck_fetcher.py  test_fetch.py  test_source_fetcher.py  test_utils.py
test/src/sources/: test_render_behavior.py
test/src/telemetry/: test_telemetry.py
tooler/: Dockerfile
(+8 files in other folders)
